--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "http-errors": "~1.6.3",
     "mongoose": "^5.7.11",
     "morgan": "~1.9.1",
+    "normalize.css": "^8.0.1",
     "pug": "2.0.0-beta11"
   }
 }
