--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "http-errors": "~1.6.3",
     "mongoose": "^5.7.11",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.6.3",
     "normalize.css": "^8.0.1",
     "pug": "2.0.0-beta11",
     "socket.io": "^2.4.1",
