--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-session": "^1.3.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "mongoose": "^5.7.11",
